[project]
name = "darbiadev-utilities"
version = "0.7.0"
description = "Namespace for utility functions"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
repository = "https://github.com/darbiadev/darbiadev-utilities/"
documentation = "https://docs.darbia.dev/darbiadev-utilities/"

[project.optional-dependencies]
dev = [
    "pre-commit==3.5.0",
    "ruff==0.1.5",
]
tests = [
    "pytest==7.4.3",
    "pytest-randomly==3.15.0",

    # Install all possible packages during tests
    "pandas==2.1.3",
]
docs = [
    "sphinx==7.2.6",
    "furo==2023.9.10",
    "sphinx-autoapi==3.0.0",
    "releases==2.1.1",

    # Install all possible packages during docs builds
    "pandas==2.1.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
preview = true
unsafe-fixes = true
target-version = "py311"
select = ["ALL"]
line-length = 120
ignore = [
    "CPY001" # (Missing copyright notice at top of file) - No license
]

[tool.ruff.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.pydocstyle]
convention = "numpy"
